# ELE400_IoT_Robot_A20

firmware/: .project  CMakeLists.txt  Release_Notes.html
firmware/Drivers/BSP/B-L475E-IOT01/: Release_Notes.html  Release_Notes.md  stm32l475e_iot01.c
firmware/Drivers/BSP/Modems/: st_readme.txt
firmware/Drivers/BSP/STM32L496G-Discovery/: Release_Notes.html  (+3 more)
firmware/Projects/B-L475E-IOT01A/Applications/RobIoT/Azure/: CMakeLists.txt  readme.txt
firmware/Projects/B-L475E-IOT01A/Applications/RobIoT/Azure/Inc/: main.h  mbedtls_config.h  mbedtls_entropy.h  net_conf.h  robiot_cfg.h  sensors_data.h  stm32l475e_iot01_conf.h  stm32l4xx_hal_conf.h
firmware/Projects/B-L475E-IOT01A/Applications/RobIoT/Azure/SW4STM32/RobIoT/: .cproject  .project  STM32L475VGTx_FLASH_NOSBSFU.ld
firmware/Projects/B-L475E-IOT01A/Applications/RobIoT/Azure/SW4STM32/RobIoT/Debug/: .gitignore  B-L475E-IOT01_Azure.map
firmware/Projects/B-L475E-IOT01A/Applications/RobIoT/Azure/Src/: main.c  sensors_data.c  stm32l4xx_it.c
firmware/Robiot/: robiot_motor_control.c  robiot_motor_control.h
firmware/Utilities/CLD_test/: test_macro.h  test_sensors.c  test_sensors.h
firmware/Utilities/Time/: timedate.c
software/: package-lock.json  package.json  webpack.config.js  webpack.server.config.js
software/src/: index.js
software/src/css/: style.css
software/src/data/: data.json
software/src/html/: index.html
software/src/js/: App.js  Message.js  logger.js
software/src/server/: EventConsumer.js  JobQueue.js  JobScheduler.js  RobotControl.js  cosmosDB.js  dbConfig.js  iothubConfig.js  server.js
(+495 files in other folders)
